feat: Introduce option to toggle opening editor as overlay

--- a/app/src/main/res/layout/fragment_settings_dialog.xml
+++ b/app/src/main/res/layout/fragment_settings_dialog.xml
@@ -313,20 +313,27 @@
             </com.google.android.material.button.MaterialButtonToggleGroup>
         </LinearLayout>
 
-        <com.google.android.material.materialswitch.MaterialSwitch
-            android:id="@+id/auto_profile_switch"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:checked="true"
-            android:text="@string/disable_auto_profile" />
 
-
-        <com.google.android.material.materialswitch.MaterialSwitch
-            android:id="@+id/use_shizuku"
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:checked="false"
-            android:text="@string/use_shizuku" />
+            android:orientation="horizontal">
+
+            <com.google.android.material.materialswitch.MaterialSwitch
+                android:id="@+id/auto_profile_switch"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:checked="true"
+                android:text="@string/disable_auto_profile" />
+
+            <com.google.android.material.materialswitch.MaterialSwitch
+                android:id="@+id/use_shizuku"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_marginLeft="10dp"
+                android:checked="false"
+                android:text="@string/use_shizuku" />
+        </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -334,7 +341,7 @@
             android:orientation="horizontal">
 
             <TextView
-                android:layout_width="100dp"
+                android:layout_width="101dp"
                 android:layout_height="wrap_content"
                 android:layout_marginRight="10dp"
                 android:text="@string/touchpad_input" />
@@ -352,6 +359,15 @@
                     android:inputType="none" />
 
             </com.google.android.material.textfield.TextInputLayout>
+
+            <com.google.android.material.materialswitch.MaterialSwitch
+                android:id="@+id/editor_overlay"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_marginLeft="20dp"
+                android:gravity="end"
+                android:checked="false"
+                android:text="@string/open_editor_as_overlay" />
 
         </LinearLayout>
 
