refactor: Add arrow keys dpad separately #87

--- a/app/src/main/res/layout/dpad.xml
+++ b/app/src/main/res/layout/dpad.xml
@@ -21,7 +21,7 @@
             android:layout_marginTop="38dp"
             android:layout_marginBottom="38dp"
             android:textSize="30sp"
-            android:text="A"
+            android:text="Y"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
@@ -35,7 +35,7 @@
             android:layout_marginEnd="38dp"
             android:layout_marginBottom="32dp"
             android:textSize="30sp"
-            android:text="S"
+            android:text="I"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -49,7 +49,7 @@
             android:layout_marginEnd="32dp"
             android:layout_marginBottom="38dp"
             android:textSize="30sp"
-            android:text="D"
+            android:text="Z"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
@@ -63,7 +63,7 @@
             android:layout_marginTop="32dp"
             android:layout_marginEnd="38dp"
             android:textSize="30sp"
-            android:text="W"
+            android:text="X"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
