--- a/app/src/main/res/layout/activity_main_controls.xml
+++ b/app/src/main/res/layout/activity_main_controls.xml
@@ -18,6 +18,17 @@
 
         <com.google.android.material.button.MaterialButton
             style="@style/Widget.Material3.Button.ElevatedButton"
+            android:id="@+id/import_export_button"
+            android:layout_width="match_parent"
+            android:layout_height="80dp"
+            android:layout_marginVertical="4dp"
+            android:drawablePadding="110dp"
+            android:text="@string/import_export"
+            app:icon="@android:drawable/stat_notify_sync"
+            app:iconSize="24dp" />
+
+        <com.google.android.material.button.MaterialButton
+            style="@style/Widget.Material3.Button.ElevatedButton"
             android:id="@+id/start_editor"
             android:layout_width="match_parent"
             android:layout_height="80dp"
