--- a/app/src/main/res/layout/floating_key.xml
+++ b/app/src/main/res/layout/floating_key.xml
@@ -1,19 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="70dp"
-    android:layout_height="70dp"
-    android:background="@drawable/key"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
     xmlns:tools="http://schemas.android.com/tools">
-    <TextView
+
+    <ImageView
+        android:id="@+id/imageView"
         android:layout_width="70dp"
+        android:layout_height="70dp"
+        android:minHeight="70dp"
+        android:layout_gravity="center"
+        app:srcCompat="@drawable/key" />
+
+    <TextView
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="20sp"
         android:gravity="center"
         android:layout_gravity="center"
         android:textColor="@color/white"
         android:id="@+id/textView"
-        tools:text="X"/>
+        tools:text="LEFTSHIFT"/>
 
     <com.google.android.material.button.MaterialButton
         android:layout_width="wrap_content"
