--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,21 +10,25 @@
     <androidx.fragment.app.FragmentContainerView
         android:id="@+id/profilesView"
         android:name="xtr.keymapper.profiles.ProfilesViewFragment"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="32dp"
+        android:layout_marginEnd="16dp"
         android:translationZ="1dp"
         android:orientation="vertical"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toTopOf="@id/cardView"
         tools:layout="@layout/fragment_profiles_view" />
     
 
-    <androidx.cardview.widget.CardView
+    <com.google.android.material.card.MaterialCardView
         style="@style/Widget.Material3.CardView.Elevated"
+        android:id="@+id/cardView"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:translationZ="-1dp"
         android:translationY="20dp"
+        android:translationZ="-1dp"
         app:cardElevation="0dp"
         app:cardCornerRadius="60dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -35,7 +39,7 @@
             android:layout_height="match_parent"
             android:layout_width="match_parent"
             layout="@layout/activity_main_cmdview" />
-    </androidx.cardview.widget.CardView>
+    </com.google.android.material.card.MaterialCardView>
 
     <include layout="@layout/activity_main_controls"
         android:layout_width="match_parent"
