--- a/app/src/main/res/layout-land/app_view.xml
+++ b/app/src/main/res/layout-land/app_view.xml
@@ -2,15 +2,12 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_gravity="center"
-    android:orientation="vertical">
+    android:layout_gravity="center">
         <ImageView
             android:layout_width="80dp"
             android:layout_height="80dp"
             android:padding="10dp"
             android:id="@+id/app_icon"
-    android:layout_gravity="center"
-            android:gravity="center"
             android:src="@mipmap/ic_launcher"
             />
 
