--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -5,48 +5,39 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".activity.MainActivity"
+    tools:background="@color/black"
     tools:ignore="ContentDescription,SpUsage">
 
-
-    <androidx.fragment.app.FragmentContainerView
-        android:id="@+id/profilesView"
-        android:name="xtr.keymapper.profiles.ProfilesViewFragment"
+    <include layout="@layout/activity_main_controls"
         android:layout_width="0dp"
-        android:layout_height="match_parent"
-        android:layout_marginLeft="32dp"
-        android:layout_marginTop="16dp"
-        android:orientation="vertical"
-        android:translationZ="1dp"
-        app:layout_constraintLeft_toRightOf="@+id/controls"
-        app:layout_constraintRight_toRightOf="parent"
-        tools:layout="@layout/fragment_profiles_view" />
+        android:layout_height="wrap_content"
+
+        android:id="@+id/controls"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toLeftOf="@id/cardView"
+        android:layout_margin="40dp"
+        app:layout_constraintTop_toTopOf="parent"/>
 
     <com.google.android.material.card.MaterialCardView
         style="@style/Widget.Material3.CardView.Elevated"
         android:layout_width="0dp"
         android:layout_height="match_parent"
-        android:translationZ="-1dp"
         android:translationX="20dp"
-        app:cardElevation="0dp"
         app:cardCornerRadius="60dp"
+        app:contentPadding="16dp"
+        android:layout_marginRight="40dp"
+        android:layout_marginVertical="40dp"
+        app:layout_constraintLeft_toRightOf="@id/controls"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintLeft_toRightOf="@id/controls"
         android:id="@+id/cardView">
-        <include
-            android:id="@+id/cmdview"
-            layout="@layout/activity_main_cmdview"
-            android:layout_margin="10dp"
+        <androidx.fragment.app.FragmentContainerView
+            android:id="@+id/profilesView"
+            android:name="xtr.keymapper.profiles.ProfilesViewFragment"
+            android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_width="match_parent"/>
+            android:orientation="vertical"
+            tools:layout="@layout/fragment_profiles_view" />
     </com.google.android.material.card.MaterialCardView>
-
-    <include layout="@layout/activity_main_controls"
-        android:layout_width="350dp"
-        android:layout_height="wrap_content"
-        android:layout_margin="20dp"
-        android:id="@+id/controls"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
