--- a/app/src/main/res/layout/profile_row_item.xml
+++ b/app/src/main/res/layout/profile_row_item.xml
@@ -54,11 +54,8 @@
                 android:id="@+id/enable_switch"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
+                android:paddingRight="10dp"
                 android:text="@string/enabled"/>
-            <Space
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1" />
 
         </LinearLayout>
 
