fix: do not allow TextView to be wider than ImageView in floating_key

--- a/app/src/main/res/layout/floating_key.xml
+++ b/app/src/main/res/layout/floating_key.xml
@@ -16,6 +16,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:maxWidth="70dp"
         android:textSize="20sp"
         android:gravity="center"
         android:layout_gravity="center"
