feat: Integrate new layout to editor

--- a/app/src/main/res/layout/keymap_editor_layout.xml
+++ b/app/src/main/res/layout/keymap_editor_layout.xml
@@ -2,11 +2,10 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/black"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <com.google.android.material.button.MaterialButtonToggleGroup
-        android:id="@+id/toggleButton"
+        android:id="@+id/toggleButtonGroup"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintEnd_toEndOf="parent"
@@ -14,7 +13,7 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <com.google.android.material.button.MaterialButton
-            android:id="@+id/button1"
+            android:id="@+id/button_misc"
             style="?attr/materialIconButtonOutlinedStyle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -22,14 +21,14 @@
             />
 
         <com.google.android.material.button.MaterialButton
-            android:id="@+id/button2"
+            android:id="@+id/button_sliders"
             style="?attr/materialIconButtonOutlinedStyle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:icon="@drawable/ic_baseline_speed_24" />
 
         <com.google.android.material.button.MaterialButton
-            android:id="@+id/button3"
+            android:id="@+id/button_shortcuts"
             style="?attr/materialIconButtonOutlinedStyle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -53,7 +52,7 @@
         android:id="@+id/sliders"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/toggleButton">
+        app:layout_constraintTop_toTopOf="parent">
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -130,8 +129,8 @@
         style="?attr/materialCardViewStyle"
         android:id="@+id/misc"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toRightOf="@id/sliders"
-        app:layout_constraintRight_toLeftOf="@id/shortcuts">
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent">
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -233,7 +232,7 @@
                 android:layout_height="wrap_content"
                 android:hint="@string/pointer">
 
-                <AutoCompleteTextView
+                <com.google.android.material.textfield.MaterialAutoCompleteTextView
                     android:id="@+id/pointer_mode"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -248,7 +247,7 @@
                 android:layout_height="wrap_content"
                 android:hint="@string/touchpad_input">
 
-                <AutoCompleteTextView
+                <com.google.android.material.textfield.MaterialAutoCompleteTextView
                     android:id="@+id/touchpad_input_mode"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -270,7 +269,7 @@
         android:id="@+id/shortcuts"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/toggleButton">
+        app:layout_constraintTop_toTopOf="parent">
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -299,7 +298,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content">
 
-                    <AutoCompleteTextView
+                    <com.google.android.material.textfield.MaterialAutoCompleteTextView
                         android:id="@+id/launch_editor_modifier"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
@@ -341,7 +340,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content">
 
-                    <AutoCompleteTextView
+                    <com.google.android.material.textfield.MaterialAutoCompleteTextView
                         android:id="@+id/pause_resume_modifier"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
@@ -380,7 +379,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content">
 
-                    <AutoCompleteTextView
+                    <com.google.android.material.textfield.MaterialAutoCompleteTextView
                         android:id="@+id/switch_profile_modifier"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
@@ -431,7 +430,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content">
 
-                    <AutoCompleteTextView
+                    <com.google.android.material.textfield.MaterialAutoCompleteTextView
                         android:id="@+id/mouse_aim_action"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
